working on favorite foods

--- a/index.html
+++ b/index.html
@@ -5,6 +5,36 @@
     </head>
     
     <body>
-	
+     <h1>Fav food</h1>
+    <ol>
+      <h2 class="header1">
+	<li>Onion chicken
+  </h2 class="header1">
+  <h3 class="content1">
+  <i>Entree
+  </h3 class="content1">
+  </p class="footer1">
+  <p> something my mom makes at home<p>
+    </p class="footer1">
+    <a href="https://www.tasteofhome.com/recipes/crispy-onion-chicken/"> onion chicken recipe</a>
+   <h2 class="header2">
+  <li><h2>rice noodles</h2></li>
+   <h2 class="content2"
+   <i><h3> Entree</h3>
+   <p> what i always get for chinese food <p.
+   <a herf="https://natashaskitchen.com/chicken-stir-fry-with-rice-noodles/"> Rices noodle recipe</a>
+  <li><h2>Egg tarts</h2></li>
+  <i><h3>snack</h3>
+  <p> it technecly a dessert but i eat it a s a snback<p>
+    <a herf="https://thewoksoflife.com/hong-kong-egg-tarts/"> the recipe for egg tars</a>
+  <li><h2>salmon</h2></li>
+  <i><h3> Entree</h3>
+  <p>Favorite fish to eat<p>
+    <a herf="https://rasamalaysia.com/honey-garlic-salmon/"> the recipe for salmon</a>
+  <li><h2>fried rice</h2></li>
+  <i><h3> Entree</h3>
+  <P> some thing goes with the fried noodles <p>
+    <aherf="https://www.gimmesomeoven.com/fried-rice-recipe/"> the recipe for fried rice.</a> 
+     </ol>
     </body>
 </html>
